all prev names removed

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -244,7 +244,7 @@
   "FAVOURITES": "المفضلة",
   "SEARCH_STORES_PRODUCTS": "ابحث عن المتاجر والمنتجات",
   "SEARCH_CATEGORY": "ابحث عن الفئة",
-  "GATECO": "Gateco",
+  "GATECO": "AdoxEcommerce",
   "UP_TO_40_OFF_DETERGENTS": "خصم يصل إلى 40% على المنظفات",
   "ORDER_NOW": "اطلب الآن",
   "T_AND_C_APPLY": "الشروط والأحكام تنطبق",
