--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -245,7 +245,7 @@
   "FAVOURITES": "Favourites",
   "SEARCH_STORES_PRODUCTS": "Search stores and products",
   "SEARCH_CATEGORY": "Search category",
-  "GATECO": "Gateco",
+  "GATECO": "AdoxEcommerce",
   "UP_TO_40_OFF_DETERGENTS": "Up to 40% Off on Detergents",
   "ORDER_NOW": "Order Now",
   "T_AND_C_APPLY": "T&Cs apply",
