registration form ui

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -1,5 +1,35 @@
 {
   "Home": "الرئيسية",
+  "ADD_NEW_CUSTOMER": "إضافة عميل جديد",
+  "ADD_NEW_SUPPLIER": "إضافة مورد جديد",
+  "ENTER_YOUR_INFORMATION_BELOW": "أدخل معلوماتك أدناه",
+  "CUSTOMER_NAME": "اسم العميل",
+  "SUPPLIER_NAME": "اسم المورد",
+  "PHONE_NUMBER": "رقم الهاتف",
+  "EMAIL_ADDRESS": "البريد الإلكتروني",
+  "PASSWORD": "كلمة المرور",
+  "CONFIRM_PASSWORD": "تأكيد كلمة المرور",
+  "ADDRESS": "العنوان",
+  "SELECT_ADDRESS": "اختر العنوان",
+  "SELECT_ADDRESS_FROM_MAP": "اختر العنوان من الخريطة",
+  "PRIMARY_CONTACT": "الاتصال الرئيسي",
+  "SHORT_NAME": "الاسم المختصر",
+  "COMPANY_NAME": "اسم الشركة",
+  "LICENSE_NUMBER": "رقم الرخصة",
+  "ENTER_COMPANY_NAME": "أدخل اسم الشركة",
+  "BRAND_NAME": "اسم العلامة التجارية",
+  "ENTER_BRAND_NAME": "أدخل اسم العلامة التجارية",
+  "CONTACT_PERSON_NANE": "اسم الشخص المسؤول",
+  "NATIONAL_ENFIELD_NUMBER": "رقم الهوية الوطنية",
+  "ENTER_ADDRESS": "أدخل العنوان",
+  "CHOOSE_CR_FILE": "اختر ملف السجل التجاري",
+  "CHOOSE_LICENSE_FILE": "اختر ملف الرخصة",
+  "CHOOSE_VAT_FILE": "اختر ملف الضريبة",
+  "NATIONAL_ADDRESS_CODE": "رمز العنوان الوطني",
+  "CHOOSE_NATIONAL_ADDRESS_FILE": "اختر ملف العنوان الوطني",
+  "BROWSE_FILES": "تصفح الملفات",
+  "ADD_CUSTOMER": "إضافة عميل",
+  "ADD_SUPPLIER": "إضافة مورد",
   "Profile": "الحساب",
   "Settings": "الإعدادات",
   "WhatsApp": "واتساب",
