--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,5 +1,39 @@
 {
   "Home": "Home",
+
+  "ADD_NEW_CUSTOMER": "Add New Customer",
+  "ADD_NEW_SUPPLIER": "Add New Supplier",
+  "ENTER_YOUR_INFORMATION_BELOW": "Enter your information below",
+  "CUSTOMER_NAME": "Customer Name",
+  "SUPPLIER_NAME": "Supplier Name",
+  "PHONE_NUMBER": "Phone Number",
+  "EMAIL_ADDRESS": "Email Address",
+  "PASSWORD": "Password",
+  "CONFIRM_PASSWORD": "Confirm Password",
+  "ADDRESS": "Address",
+  "SELECT_ADDRESS": "Select Address",
+  "SELECT_ADDRESS_FROM_MAP": "Select Address from Map",
+  "PRIMARY_CONTACT": "Primary Contact",
+  "SHORT_NAME": "Short Name",
+  "COMPANY_NAME": "Company Name",
+  "LICENSE_NUMBER": "License Number",
+  "ENTER_COMPANY_NAME": "Enter Company Name",
+  "CONTACT_PERSON_NAME": "Contact Person Name",
+  "NATIONAL_UNIFIED_NUMBER": "National Unified Number",
+  "ENTER_COUNTRY": "Enter Country",
+  "BRAND_NAME": "Brand Name",
+  "GENERAL_INFORMATION": "General Information",
+  "MOBILE": "Mobile",
+  "NATIONAL_ENFIELD_NUMBER": "National Enfield Number",
+  "ENTER_ADDRESS": "Enter Address",
+  "CHOOSE_CR_FILE": "Choose CR File",
+  "CHOOSE_LICENSE_FILE": "Choose License File",
+  "CHOOSE_VAT_FILE": "Choose VAT File",
+  "NATIONAL_ADDRESS_CODE": "National Address Code",
+  "CHOOSE_NATIONAL_ADDRESS_FILE": "Choose National Address File",
+  "BROWSE_FILES": "Browse Files",
+  "ADD_CUSTOMER": "Add Customer",
+  "ADD_SUPPLIER": "Add Supplier",
   "Profile": "Profile",
   "Settings": "Settings",
   "WhatsApp": "WhatsApp",
